# search-tree-Ocaml

./: .gitignore  .merlin  dune  dune-project  search-tree.ml  search-tree.opam  searchTree.ml  searchTree.opam
lib/: searchTree.ml
test/: .merlin  dune  test.expected  test.ml
