opam-version: "2.0"
name: "search-tree"
version: "0.1"
synopsis: "A module to use simply search tree"
description: """
Longer description
"""
maintainer: "Oscar Lahaie <oscarlahaie83@gmail.com>"
authors: "Oscar Lahaie <oscarlahaie83@gmail.com>"
license: ""
homepage: "https://github.com/OscarLahaie/search-tree-Ocaml"
bug-reports: "https://github.com/OscarLahaie/search-tree-Ocaml/issues"
dev-repo: "https://github.com/OscarLahaie/search-tree-Ocaml"
depends: [ "ocaml" "ocamlfind" ]
build: [
  ["./configure" "--prefix=%{prefix}%"]
  [make]
]
install: [make "install"]