opam-version: "2.0"
name: "searchTree"
version: "0.1"
synopsis: "A module to easily implement search trees"
description: """
The module contains what is needed to use search trees and the functions necessary to use them. 
"""
maintainer: "Oscar Lahaie <oscarlahaie83@gmail.com>"
authors: "Oscar Lahaie <oscarlahaie83@gmail.com>"
homepage: "https://github.com/OscarLahaie/search-tree-Ocaml"
bug-reports: "https://github.com/OscarLahaie/search-tree-Ocaml/issues"
depends: [ "ocaml" "ocamlfind" ]
build: [
    [
        "dune"
        "build"
        "-p"
        name
        "-j"
        jobs
        "@install"
        "@runtest" {with-test}
    ]
]
