opam-version: "2.0"
name: "searchTree"
version: "0.1"
synopsis: "A module to easily implement search trees"
description: """
The module contains what is needed to use search trees and the functions necessary to use them. 
"""
maintainer: "Oscar Lahaie <oscarlahaie83@gmail.com>"
authors: "Oscar Lahaie <oscarlahaie83@gmail.com>"
license: "GPL-3.0-or-later"
homepage: "https://github.com/OscarLahaie/searchTree-Ocaml"
bug-reports: "https://github.com/OscarLahaie/searchTree-Ocaml/issues"
dev-repo: "git+https://github.com/OscarLahaie/searchTree-Ocaml.git"
depends: [ "ocaml" "ocamlfind" "dune" ]
build: ["dune" "build" "-p" name "-j" jobs "@runtest"]